# axocoatl

./: .gitignore  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  axocoatl.example.yaml  axocoatl.yaml  llms.txt
.github/workflows/: dns-add.yml  marketing-deploy.yml  publish-missing-crates.yml  release.yml  setup-cloudflare.yml
axocoatl-cli/src/: main.rs
axocoatl-server/src/: auth.rs  lib.rs  middleware.rs  routes.rs
axocoatl-server/static/: index.html
crates/axocoatl-actor/: Cargo.toml
crates/axocoatl-actor/src/: actor_impl.rs  behavior.rs  coordinator.rs  core_memory_tools.rs  default_behavior.rs  frontier_resolver.rs  lib.rs  recall.rs
crates/axocoatl-config/src/: automation.rs  convert.rs  lib.rs  secret.rs  types.rs
crates/axocoatl-coordination/: Cargo.toml
crates/axocoatl-coordination/src/: auction.rs  htn.rs  lattice.rs
crates/axocoatl-core/src/: agent.rs
crates/axocoatl-daemon/: Cargo.toml
crates/axocoatl-daemon/src/: automation_executor.rs  automation_runs.rs  automation_store.rs  bootstrap.rs  consolidation.rs  git.rs  interrupt.rs  lib.rs  webhook.rs
crates/axocoatl-graph/src/: lib.rs
crates/axocoatl-isolation/src/: firecracker.rs  lib.rs  session_sandbox.rs  wasmtime_sandbox.rs
crates/axocoatl-llm-anthropic/src/: lib.rs
crates/axocoatl-llm-gemini/: Cargo.toml
crates/axocoatl-llm-gemini/src/: lib.rs
crates/axocoatl-llm-mistral/: Cargo.toml
crates/axocoatl-llm-mistral/src/: lib.rs
crates/axocoatl-llm-ollama/src/: lib.rs
crates/axocoatl-llm-openai/src/: convert.rs  lib.rs
crates/axocoatl-llm-openai/tests/: vertical_integration.rs
crates/axocoatl-llm/src/: fallback.rs  lib.rs  provider.rs  registry.rs
crates/axocoatl-memory/: Cargo.toml
crates/axocoatl-memory/src/: chat.rs  checkpoint.rs  core_memory.rs  daily_log.rs  error.rs  files.rs  lib.rs  long_term.rs  perms.rs  semantic.rs  transcript.rs
crates/axocoatl-session/src/: lib.rs
crates/axocoatl-token/src/: budget.rs  format.rs  lib.rs  pipeline.rs
crates/axocoatl-tools/src/: executor.rs  fs_tools.rs
docs/: ARCHITECTURE.md  LOCAL_TESTING_GUIDE.md  TROUBLESHOOTING.md
examples/a2a-server/: Cargo.toml  README.md  main.rs
examples/code-reviewer/: Cargo.toml  main.rs
examples/configs/: README.md  event-webhooks.yaml  feature-dev.yaml  incident-response.yaml  local-only.yaml  mcp-tools.yaml  research-pipeline.yaml
examples/crash-recovery/: Cargo.toml  README.md  main.rs
examples/customer-support/: Cargo.toml
examples/htn-planner/: Cargo.toml  README.md  main.rs
examples/mcp-bridge/: Cargo.toml  README.md  axocoatl.example.mcp.yaml  main.rs
examples/memory-recall/: Cargo.toml  README.md  main.rs
examples/multi-provider/: Cargo.toml  README.md  axocoatl.multi-provider.yaml  main.rs
examples/proactive-agents/: Cargo.toml  README.md  axocoatl.proactive.example.yaml  main.rs
examples/research-assistant/: Cargo.toml
examples/sandbox-session/: Cargo.toml  README.md  main.rs
examples/skills-lattice/: Cargo.toml  README.md  axocoatl.yaml  main.rs
examples/stigmergic-workflow/: Cargo.toml  README.md  main.rs
examples/tool-hooks/: Cargo.toml  README.md  main.rs
launch/: hn.md  lobsters.md  reddit.md  twitter.md
scripts/: install.sh
sites/docs/src/content/docs/: getting-started.mdx  index.mdx
sites/docs/src/content/docs/api/: cli.mdx
sites/docs/src/content/docs/concepts/: agents.mdx  lattice.mdx  protocols.mdx  sessions.mdx  skills.mdx
sites/docs/src/content/docs/guides/: architecture.md  examples-gallery.mdx  ollama-quickstart.md
sites/marketing/: index.html
sites/marketing/changelog/: index.html
sites/marketing/concepts/: index.html
sites/marketing/install/: index.html
sites/marketing/styles/: finder.css
sites/marketing/why/: index.html
