[package]
name = "axocoatl-actor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Actor-based agent runtime for Axocoatl, built on ractor"

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../axocoatl-core" }
axocoatl-llm = { version = "0.1.0", path = "../axocoatl-llm" }
axocoatl-token = { version = "0.1.0", path = "../axocoatl-token" }
axocoatl-memory = { version = "0.1.0", path = "../axocoatl-memory" }
axocoatl-tools = { version = "0.1.0", path = "../axocoatl-tools" }
axocoatl-coordination = { version = "0.1.0", path = "../axocoatl-coordination" }
ractor = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-stream = { workspace = true }
axocoatl-config = { version = "0.1.0", path = "../axocoatl-config" }
tempfile = "3.27"
