[package]
name = "axocoatl-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "4-tier memory system and agent state checkpointing for Axocoatl"
# Local Tier-4 model weights are 88 MiB — far over the 10 MiB crates.io
# upload cap.  They're downloaded at runtime via axocoatl-memory's model
# fetcher, never required at compile time, so exclude them from the
# published crate tarball.
exclude = ["data/", "data/**"]

[dependencies]
axocoatl-core = { version = "0.1.0", path = "../axocoatl-core" }
tokio = { workspace = true, features = ["fs", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
pdf-extract = { workspace = true }
calamine = { workspace = true }

# Neural sentence embeddings (Tier 4) — pure-Rust inference via Candle, no
# ONNX/C++. Behind a default-on feature so a lean build can opt out.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }
reqwest = { workspace = true, features = ["blocking"], optional = true }

[features]
default = ["neural-embeddings"]
neural-embeddings = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:reqwest",
]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.27"
