[package]
name = "crash-recovery"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
axocoatl-core = { path = "../../crates/axocoatl-core" }
axocoatl-actor = { path = "../../crates/axocoatl-actor" }
axocoatl-llm = { path = "../../crates/axocoatl-llm" }
axocoatl-memory = { path = "../../crates/axocoatl-memory" }

tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ractor = { version = "0.15", features = ["monitors"] }

[[bin]]
name = "crash-recovery"
path = "main.rs"
