[package]
name = "customer-support"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
axocoatl-core = { path = "../../crates/axocoatl-core" }
axocoatl-actor = { path = "../../crates/axocoatl-actor" }
axocoatl-llm = { path = "../../crates/axocoatl-llm" }
axocoatl-token = { path = "../../crates/axocoatl-token" }
axocoatl-memory = { path = "../../crates/axocoatl-memory" }

tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ractor = { version = "0.15", features = ["monitors"] }

[[bin]]
name = "customer-support"
path = "main.rs"
