[package]
name = "tool-hooks"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
axocoatl-core = { path = "../../crates/axocoatl-core" }
axocoatl-actor = { path = "../../crates/axocoatl-actor" }
axocoatl-tools = { path = "../../crates/axocoatl-tools" }
axocoatl-token = { path = "../../crates/axocoatl-token" }
axocoatl-llm = { path = "../../crates/axocoatl-llm" }

tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
serde_json = "1.0"
ractor = { version = "0.15", features = ["monitors"] }

[[bin]]
name = "tool-hooks"
path = "main.rs"
